k8s/config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "sample-app"
  namespace: "default"
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "sample-app"
