k8s/config/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "sample-app"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health
  labels:
    app: sample-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "sample-app"
              servicePort: 80
